...
                .padding(.horizontal)
            }
            .cornerRadius(15)
            .foregroundColor(Color("text"))
            .padding(.horizontal)
        }
        .accessibilityIdentifier("weatherRowButton")
    }
}

private extension WeatherRow {
    var temperatures: some View {
        HStack {
...
