...
        .navigationBarHidden(true)
        .confirmationDialog(
            "Delete location",
            isPresented: $detailViewModel.showingDeleteDialog,
            titleVisibility: .visible
        ) {
            Button("Delete", role: .destructive) {
                weatherViewModel.removeWeather(detailViewModel.weather)
                dismiss()
            }
        }
    }
}
...
